fixed main container and footer spacing

--- a/styles.css
+++ b/styles.css
@@ -57,16 +57,32 @@ body {
     cursor: pointer;
 }
 
+.hamburger {
+    display: none;
+}
+
+.bar {
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    background-color: black;
+}
+
+@media only screen and (max-width: 425px){
+    
+}
+
 /* MAIN */
 .main-container {
-    margin-top: auto;
-    margin-bottom: auto;
-    margin-left: 100px;
-    margin-right: 100px;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
+    height: calc(100vh - (136px + 2em));
 }
 
 .main-article {
@@ -75,7 +91,7 @@ body {
     height: 300px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 .title {
@@ -170,10 +186,12 @@ body {
 }
 
 .footer {
-    margin-bottom: 20px;
     text-align: center;
     color: white;
-    position: absolute;
-    bottom: 0;
     width: 100%;
+    height: 2em;
+}
+
+@media only screen and (max-width: 425px){
+    
 }
